<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:showDividers="middle">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/titleBarHeight_48"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/title_bar_left"
            android:layout_width="@dimen/view_space_22"
            android:src="@drawable/title_back"
            android:layout_marginStart="@dimen/view_space_12"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:contentDescription="@string/return_tv" />

        <TextView
            android:id="@+id/title_bar_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/wearing_labels_for_epidemic_prevention"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size_0.5"
        android:background="@color/D1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_40"
        android:background="#FFFAE3">

        <TextView
            android:id="@+id/tips"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_height_40"
            android:layout_marginStart="@dimen/view_space_18"
            android:gravity="center"
            android:text="@string/the_number_of_ear_tags_to_be_replaced_cannot_exceed"
            android:textColor="@color/T6"
            android:textSize="@dimen/text_size_12"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/not_data_rl"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:layout_centerInParent="true"
            android:src="@drawable/ic_no_data_1"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:contentDescription="@string/no_data_tips">
        </ImageView>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/view_height_8"
        android:background="@android:color/white"
        android:overScrollMode="never"
       />

    <LinearLayout
        android:orientation="vertical"
         android:layout_gravity="bottom"
        android:padding="@dimen/view_space_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/commit_bt"
            android:visibility="gone"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_44"
            android:layout_marginStart="@dimen/view_space_30"
            android:layout_marginEnd="@dimen/view_space_30"
            android:background="@drawable/bg_details"
            android:lineSpacingExtra="@dimen/view_space_20"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/commit_the_filler_label_segment"
            android:layout_marginBottom="@dimen/view_space_12"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14" />

        <Button
            android:id="@+id/edit_code_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_44"
            android:layout_marginStart="@dimen/view_space_30"
            android:layout_marginEnd="@dimen/view_space_30"
            android:background="@drawable/ripple_login"
            android:lineSpacingExtra="@dimen/view_space_20"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/enter_the_filler_label_segment"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>




</LinearLayout>