<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:showDividers="middle">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/titleBarHeight_48"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/title_bar_left"
            android:layout_width="@dimen/view_space_22"
            android:src="@drawable/title_back"
            android:layout_marginStart="@dimen/view_space_12"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:contentDescription="@string/return_tv" />

        <TextView
            android:id="@+id/title_bar_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/wearing_labels_for_epidemic_prevention"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/query_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/view_space_12"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/query_tv"
            android:textColor="@color/J5"
            android:textSize="16sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size_0.5"
        android:background="@color/D1"
        />


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
       >

        <RelativeLayout
            android:id="@+id/not_data_rl"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_centerInParent="true"
                android:src="@drawable/ic_no_data_1"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:contentDescription="@string/no_data_tips">
            </ImageView>

        </RelativeLayout>
        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/refreshLayout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:srlPrimaryColor="#33aaff"
            app:srlAccentColor="@android:color/white"
            app:srlEnableHeaderTranslationContent="true"
            >
            <com.scwang.smart.refresh.header.BezierRadarHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:overScrollMode="never"
                tools:listitem="@android:layout/simple_list_item_2"/>
            <com.scwang.smart.refresh.footer.ClassicsFooter
                android:layout_width="match_parent"
                app:srlTextNothing="@string/footer_nothing"
                android:layout_height="wrap_content"/>
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>


        <include
            android:id="@+id/nar_drawer_immune_xdr"
            android:layout_width="@dimen/view_space_300"
            android:layout_height="fill_parent"
            android:layout_gravity="end"
            layout="@layout/item_immune_xdr_query" />
    </androidx.drawerlayout.widget.DrawerLayout>



</LinearLayout>