<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_border_white"
    android:orientation="vertical"
    >

    <LinearLayout

        android:orientation="vertical"
        android:paddingLeft="@dimen/view_space_26"
        android:paddingRight="@dimen/view_space_26"
        android:paddingTop="@dimen/view_space_26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="绑定手机号"
            android:textColor="@color/T2"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"

            />
        <LinearLayout

            android:id="@+id/sms_login_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/phone_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/view_space_20"

                android:background="@drawable/edittext_selector"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/view_space_30"
                    android:layout_height="@dimen/view_space_30"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/view_space_12"
                    android:src="@drawable/ic_tel">

                </ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/view_space_6"
                        android:gravity="center"
                        android:text="@string/_86"
                        android:textColor="@color/T9"
                        android:textSize="@dimen/text_size_14" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/view_space_2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/view_space_10"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:src="@drawable/shang"
                            android:textSize="@dimen/text_size_14" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/xia"
                            android:textSize="@dimen/text_size_14" />
                    </LinearLayout>
                </LinearLayout>

                <EditText
                    android:id="@+id/account_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_height_48"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/view_space_14"
                    android:layout_marginEnd="@dimen/view_space_14"
                    android:background="@null"
                    android:gravity="start|center"
                    android:hint="请输入备案手机号"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/T1"
                    android:textCursorDrawable="@drawable/cursor_bg"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sms_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/view_space_16"
                android:background="@drawable/edittext_selector"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/verification_et"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/view_height_48"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/view_space_12"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="start|center"
                    android:hint="@string/input_verification"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:paddingStart="@dimen/view_space_22"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/T1"
                    android:textCursorDrawable="@drawable/cursor_bg"
                    android:textSize="@dimen/text_size_16" />
                <Button
                    android:id="@+id/send_sms_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_send_sms"
                    android:padding="@dimen/view_space_14"
                    android:text="@string/send_sms"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_12">
                </Button>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space_12"
            android:layout_marginBottom="@dimen/view_space_18"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ver_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/view_height_44"

                android:layout_weight="1"
                android:background="@drawable/ripple_login"
                android:lineSpacingExtra="@dimen/view_space_20"
                android:lineSpacingMultiplier="1.5"
                android:text="验证"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_login_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/phone_num_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_height_10"
                android:layout_marginTop="@dimen/view_space_20"
                android:layout_marginRight="@dimen/view_height_10"
                android:background="@drawable/edittext_selector"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/view_space_30"
                    android:layout_height="@dimen/view_space_30"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/view_space_12"
                    android:src="@drawable/ic_tel"></ImageView>

                <EditText
                    android:id="@+id/phone_num_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_height_48"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/view_space_14"
                    android:layout_marginEnd="@dimen/view_space_14"
                    android:background="@null"
                    android:gravity="start|center"
                    android:hint="@string/input_phone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/T1"
                    android:textCursorDrawable="@drawable/cursor_bg"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/password_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_height_10"
                android:layout_marginTop="@dimen/view_space_16"
                android:layout_marginRight="@dimen/view_height_10"
                android:background="@drawable/edittext_selector"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/view_space_30"
                    android:layout_height="@dimen/view_space_30"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/view_space_12"
                    android:src="@drawable/password_iv"></ImageView>

                <EditText
                    android:id="@+id/pwd_num_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_height_48"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/view_space_14"
                    android:background="@null"
                    android:gravity="start|center"
                    android:hint="请输入密码"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/T1"
                    android:textCursorDrawable="@drawable/cursor_bg"
                    android:textSize="@dimen/text_size_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_space_14"
                android:layout_marginTop="@dimen/view_space_12"
                android:layout_marginEnd="@dimen/view_space_12"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/save_phone_num_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/selector_checkbox_fuxuan"
                    android:checked="true"
                    android:padding="@dimen/view_space_8"
                    android:text="记住用户名"
                    android:textColor="@color/T2"
                    android:textSize="@dimen/text_size_14"></CheckBox>

                <CheckBox
                    android:id="@+id/save_pwd_num_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector_checkbox_fuxuan"
                    android:checked="true"
                    android:padding="@dimen/view_space_8"
                    android:text="记住密码"
                    android:textColor="@color/T2"
                    android:textSize="@dimen/text_size_14"></CheckBox>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>